...
    "title": "New terms and conditions",
    "explanation_markdown": "The management of Yivi has recently been transferred to another organization ([Yivi B.V.](https://yivi.app/en/about_yivi)).\n\nTherefore, the terms and conditions have changed slightly.\n\nWe ask you to [read them]({terms_url}) and agree to them below.",
    "accept": "Accept",
    "dismiss": "Not now"
  },
  "action_feedback": {
    "ok": "OK"
  },
  "activity": {
    "data_deleted": "Data deleted",
    "data_deleted_semantics": "Data deleted from {issuerName} on {date}",
    "data_received": "Data received",
    "data_received_semantics": "Data received from {otherParty} on {date}",
...
      "details": {
        "title": "Adding data",
        "purpose_question": "What can I do with this data?",
        "content_question": "Which data do I retrieve?",
        "howto_question": "How does it work?",
        "back_button": "Cancel",
        "get_button": "Add",
        "disclosure_info_markdown": "**Note:** You will retrieve all available data, but you will only share the data needed in the request.",
        "obtain": "Add {credential} to my Yivi-app"
      }
    },
    "search": {
      "no_results": "No data found for '{query}'."
...
  },
  "disclosure_permission": {
    "title": "Data request",
    "next": "Next",
    "change_choice": "Change choice",
    "choose": "Make a choice",
    "obtain_new": "Obtain new data",
    "next_step": "Next step",
    "obtain_data": "Obtain data",
    "close": "Close",
    "optional_data": "Optional data",
    "add_optional_data": "Add optional data",
    "no_data_selected": "No data selected",
    "introduction": {
      "title": "Get going",
      "header": "Share your data",
      "explanation": "Collect the required data to be able to share it with requesting parties.",
      "continue": "Get going"
...
      "explanation": "This data has already been added to your app. Verify that the data is still correct."
    },
    "overview": {
      "title": "Share my data",
      "sign": "This is the message you're signing:",
      "explanation": "Share my data with {requestorName}",
      "confirm": "Share data",
      "confirm_sign": "Sign and share",
      "requestor_verification": {
        "verified_suffix": "is asking for your data. This is a known party that has registered itself with Yivi.",
        "unverified_suffix": "is asking for your data. Warning: this party is not known by Yivi.",
        "explanation": "What does this mean?",
        "bottom_sheet": {
...
